--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tag/sudzy",
+    "name": "kungfunk/sudzy",
     "description": "Model validator for use with Paris (and Idiorm).",
     "keywords": ["validator", "model","idiorm", "paris"],
-    "homepage": "https://github.com/tag/sudzy",
+    "homepage": "https://github.com/kungfunk/sudzy",
     "license": "BSD",
     "authors": [
         {
@@ -14,7 +14,7 @@
     ],
     "repository": {
         "type": "vcs",
-        "url": "https://github.com/tag/sudzy"
+        "url": "https://github.com/kungfunk/sudzy"
     },
     "require": {
         "php": ">=5.3.0",
